...
                android:text="@string/network_error"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/centralFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <android.support.design.widget.NavigationView
...
