<resources>
    <string name="app_name">PolyTroc</string>
    <string name="my_account">My account</string>
    <string name="userpicture">userpicture</string>
    <string name="userMail">email</string>
    <string name="add_offer">add</string>
    <string name="title_activity_log_in">LogInActivity</string>
    <string name="title_activity_sign_in">SignIn</string>
    <string name="log_out">log_out</string>
    <string name="go_to_login">Go To Login</string>
    <string name="profile_image">Profile Image</string>
    <string name="go_to_main_menu">Go To Main Menu</string>
    <string name="profile_activity_name">Profile</string>
    <string name="edit_profile_activity_name">Edit Profile</string>
    <string name="user_reputation">Reputation:</string>
    <string name="user_preferences">Preferences:</string>
    <string name="username">Username</string>
    <string name="change_pic">Change profile picture</string>
    <string name="save">Save</string>
    <string name="offer_name">Offer name:</string>
    <string name="offer_description">Description:</string>
    <string name="offer_picture">Picture:</string>
    <string name="create_new_offer">Create new offer</string>
    <string name="button_create_offer">Create offer</string>
    <string name="show_offer_title">Show offer</string>
    <string name="error_create_offer">The name and the description cannot be empty.</string>
    <string name="name">Name:</string>
    <string name="username_presentation">Username:</string>
    <string name="mail">Mail:</string>
    <string name="create_account">Create Account</string>
    <string name="error_create_offer_invalid">The name and the description can\'t be empty.</string>
    <string name="error_create_offer_database">Impossible to create the offer.</string>
    <string name="list_offer_error_database">Could not retrieve the offers.</string>
    <string name="following">Following</string>
    <string name="offers">Offers</string>
    <string name="create_offer">Create Offer</string>
    <string name="incorrect_user_creation">\"Please, enter correct info\"</string>
    <string name="modify_offer">modify offer</string>
    <string name="offer_deleted">Offer deleted</string>
    <string name="delete_offer">Delete offer</string>
    <string name="no_offers">No offers to display\nPlease try with other parameters</string>
    <string name="description">Infos:</string>
    <string name="infos">Infos:</string>
    <string name="error_load_user">Could not load user profile</string>
    <string name="error_load_messages">Could not load messages</string>
    <string name="follow">Follow</string>
    <string name="now_following">You are now following </string>
    <string name="error_following">Could not follow </string>
    <string name="reactions">Reactions:</string>
    <string name="category_show_offer">Category:</string>
    <string name="post">post</string>
    <string name="pick_date">Pick Date</string>
    <string name="date">Date:</string>
    <string name="valid_date">Please Enter a Valid Date</string>
    <string name="location_show_offer">Location:</string>
    <string name="answer_load_error">The answers of this offer could not be loaded</string>
    <string name="add_answer">Add your answer</string>
    <string name="username_min_length">The username should have at least %d characters.</string>
    <string name="my_offers">My offers</string>
    <string name="notifications">Notifications</string>
    <string name="notif_answer_chosen">%s has accepted your answer on offer \"%s\"</string>
    <string name="notif_follow">%s is now following you</string>
    <string name="notif_answer_posted">%s posted an answer on your offer \"%s\"</string>
    <string name="notif_level_gained">You leveled up! Congrats!</string>
    <string name="notif_friend_posted">%s posted a new offer </string>
    <string name="notif_also_answered">%s also answered the offer \"%s\"</string>
    <string name="no_notifications">You currently don\'t have any notification</string>
    <string name="notif_error">There has been an error loading the notifications</string>
    <string name="notif_delete_error">The notification couldn\'t be deleted</string>
    <string name="title_activity_leaderboard">Leaderboard</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="statistics">Statistics</string>
    <string name="answer_limit">The answer should be at least %d characters.</string>
    <string name="accept_favorite">Accept answer</string>
    <string name="accept_favorite_question">Do you want to accept this answer?</string>
    <string name="remove_favorite">Did you change your mind?</string>
    <string name="remove_favorite_question">Do you really want to remove your approval?</string>
    <string name="tmp_file_suppression_error">Temporary file couldn\'t be removed</string>
    <string name="close_the_offer">Close the offer</string>
    <string name="the_offer_is_closed">The offer is closed.</string>
    <string name="presentation">Welcome to Polytroc, please put your username. You can change your picture, your description and many other things after this step.</string>
    <string name="network_error">No internet connection</string>
    <string name="open_discussion">Open discussion</string>
    <string name="hint_greeting">You can now send messages to each other</string>
    <string name="search">Search title</string>
    <string name="closed">closed</string>
    <string name="open">open</string>
    <string name="old_offer_found">Old offer found</string>
    <string name="restore_offer_message">You already started creating an offer. Do you want to continue to edit it?</string>
    <string name="choose_offer_template">Choose offer template</string>
    <string name="save_as_pattern">Save as pattern</string>
    <string name="cancel">Cancel</string>
    <string name="choose_name_pattern">Choose a name for the new offer pattern</string>
    <string name="choose_a_template">Choose a template</string>
    <string name="accept">Accept</string>
    <string name="create_pattern_error_empty">You should at least provide a title, a description or a category to save this offer as a pattern.</string>
    <string name="error_no_pattern_saved">There is no pattern saved.</string>
    <string name="can_not_load_pattern">Could not load the pattern.</string>
    <string name="can_not_load_pattern_list">Can not load the list of pattern</string>
</resources>
